5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1638_2449.log
== TEST (2019-04-11 10:22:24) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b-f))/ ((a*e)-(b-d))
y = ((a*f) - (c*d))/ ((a*e)-(b-d))

c1 = (a*x)+(b*y)
f1 = (d*x)+(e*y)

if (c1 and f1 != 0 ):
	print(c1)
	print(f1)
else:
	print("Nao tem solucao ")
-- OUTPUT:
12.2
12.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:23:57) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b-f))/ ((a*e)-(b-d))
y = ((a*f) - (c*d))/ ((a*e)-(b-d))

if (x and y != 0 ):
	print(x)
	print(y)
else:
	print("Nao tem solucao ")
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:24:56) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))

if (x and y != 0 ):
	print(x)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:25:10) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))

if (x and y != 0 ):
	print(x)
	print(y)
else:
	print("Nao tem solucao ")
-- EXECUTION TIME:
0.180791
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:25:19) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))

if (x and y != 0 ):
	print(x)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:28:05) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

if (x != 0 ):
	x = ((c*e) - (b*f))/ ((a*e)-(b*d))
	print(x)
	(y != 0)
	y = ((a*f) - (c*d))/ ((a*e)-(b*d))
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (x != 0 ):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:29:10) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))


if (x != 0 ):
	print(x)
	(y != 0)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:29:19) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))


if (x != 0 ):
	print(x)
	(y != 0)
	print(y)
else:
	print("Nao tem solucao ")
-- EXECUTION TIME:
0.191075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:06) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))


if (x != 0 ):
	print(x)
	(y != 0)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:50) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))


if (x % != 0 ):
	print(x)
	(y % != 0)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
File "XXXX", line 12
    if (x % != 0 ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:17) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))


if (x % == 0 ):
	print(x)
	(y % == 0)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
File "XXXX", line 12
    if (x % == 0 ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:30) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))


if (x == 0 ):
	print(x)
	(y == 0)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:48) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))


if (x != 0 ):
	print(x)
	(y != 0)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:35:15) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))


if (x != 0 ):
	print(x)
	(y != 0)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:35:31) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))/ ((a*e)-(b*d))
y = ((a*f) - (c*d))/ ((a*e)-(b*d))


if (x != 0 ):
	print(x)
	(y != 0)
	print(y)
else:
	print("Nao tem solucao ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f))/ ((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:38:54) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))
x1 = ((a*e)-(b*d))
y = ((a*f) - (c*d))
y1 = ((a*e)-(bd))

if (x1 and y1 == 0)
	print("Nao tem solucao ")
	
else:
	print(x/x1)
	print(y/y1)
-- ERROR:
File "XXXX", line 13
    if (x1 and y1 == 0)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:39:00) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))
x1 = ((a*e)-(b*d))
y = ((a*f) - (c*d))
y1 = ((a*e)-(bd))

if (x1 and y1 == 0):
	print("Nao tem solucao ")
	
else:
	print(x/x1)
	print(y/y1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    y1 = ((a*e)-(bd))
NameError: name 'bd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:39:20) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))
x1 = ((a*e)-(b*d))
y = ((a*f) - (c*d))
y1 = ((a*e)-(b*d))

if (x1 and y1 == 0):
	print("Nao tem solucao ")
	
else:
	print(x/x1)
	print(y/y1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(x/x1)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:39:31) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))
x1 = ((a*e)-(b*d))
y = ((a*f) - (c*d))
y1 = ((a*e)-(b*d))

if (x1 and y1 == 0):
	print("Nao tem solucao ")
	
else:
	print(x/x1)
	print(y/y1)
-- EXECUTION TIME:
0.185581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 17, in <module>
    print(x/x1)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:39:48) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))
x1 = ((a*e)-(b*d))
y = ((a*f) - (c*d))
y1 = ((a*e)-(b*d))

if (x1 and y1 == 0):
	print("Nao tem solucao ")
	
else:
	print(x/x1)
	print(y/y1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(x/x1)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:40:31) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))
x1 = ((a*e)-(b*d))
y = ((a*f) - (c*d))
y1 = ((a*e)-(b*d))

if (x1 and y1 == 0):
	print("Nao tem solucao ")
	
else:
	(x1 and y1 > 0)
	print(x/x1)
	print(y/y1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(x/x1)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:41:18) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))
x1 = ((a*e)-(b*d))
y = ((a*f) - (c*d))
y1 = ((a*e)-(b*d))

if (x1 == 0):
	(y1 == 0)
	print("Nao tem solucao ")
	
else:
	print(x/x1)
	print(y/y1)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:41:26) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))
x1 = ((a*e)-(b*d))
y = ((a*f) - (c*d))
y1 = ((a*e)-(b*d))

if (x1 == 0):
	(y1 == 0)
	print("Nao tem solucao ")
	
else:
	print(x/x1)
	print(y/y1)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:41:35) 
-- CODE:
a = float(input("valor de a : "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))
e = float(input("valor de e: "))
f = float(input("valor de f: "))

x = ((c*e) - (b*f))
x1 = ((a*e)-(b*d))
y = ((a*f) - (c*d))
y1 = ((a*e)-(b*d))

if (x1 == 0):
	(y1 == 0)
	print("Nao tem solucao ")
	
else:
	print(x/x1)
	print(y/y1)
-- EXECUTION TIME:
0.171244
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
